fix for scrollbar

--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,16 @@
 body{
     padding: 0;
     margin: 0;
+    overflow: hidden;
 }
+
+::-webkit-scrollbar { width: 3px; height: 3px;}
+::-webkit-scrollbar-button {  background-color: #666; }
+::-webkit-scrollbar-track {  background-color: #999;}
+::-webkit-scrollbar-track-piece { background-color: #ffffff;}
+::-webkit-scrollbar-thumb { height: 50px; background-color: #666; border-radius: 3px;}
+::-webkit-scrollbar-corner { background-color: #999;}}
+::-webkit-resizer { background-color: #666;}
 
 .desktop{
     width: 100vw;
@@ -274,7 +283,7 @@ body{
     height: 2.7%;
     top: 12.85%;
     left: 15.3%;
-    background: url("/images/yellow.ico") center no-repeat;
+    background: url("../images/yellow.ico") center no-repeat;
     background-size: cover;
 }
 
@@ -410,7 +419,7 @@ body{
 .top-container{
     width: 100%;
     height: 75%;
-    background: url("/images/yellow.ico") center no-repeat;
+    background: url("../images/yellow.ico") center no-repeat;
     background-size: 90%;
     margin: 0 auto;
 }
@@ -418,7 +427,7 @@ body{
 .top-page-container{
     width: 100%;
     height: 75%;
-    background: url("/images/Notepad.png") center no-repeat;
+    background: url("../images/Notepad.png") center no-repeat;
     background-size: 70%;
     margin: 0 auto;
 }
